--- a/lessons/1.md
+++ b/lessons/1.md
@@ -1,6 +1,6 @@
 # Aula 1 - Um exemplo da vida real
 
-Quando estamos iniciando em um projeto de software, na maioria das vezes, algum (ou muito) código já existe, e não são todos que tem o privilégio de trabalhar nos chamados _green field projects_, ou seja, projetos que estão começando do zero.
+Quando estamos iniciando em um projeto de software, na maioria das vezes algum (ou muito) código já existe, e não são todos que tem o privilégio de trabalhar nos chamados _green field projects_, ou seja, projetos que estão começando do zero.
 
 Estruturei este curso trazendo situações reais de projetos de software, porém em uma escala menor, para focarmos no aprendizado de diferentes conceitos e técnicas, onde você irá trabalhar com uma base de código existente, com alguns testes já escritos (nem sempre da melhor forma) e com cenários de teste ainda à serem cobertos.
 
@@ -36,7 +36,7 @@ Por fim, caso ocorra um erro na busca, um componente de _fallback_ é exibido ao
 
 A aplicação **Hacker Stories** já possui testes _end-to-end_. Eles são:
 
-* Teste que garante que o _footer_ é exibido, visto que para o botão de remover uma história utilizei um ícone do [**Freepick**](https://www.flaticon.com/authors/freepik) e preciso citálo em algum lugar para dar-lhe os créditos
+* Teste que garente que o _footer_ é exibido, visto que para o botão de remover uma história utilizei um ícone do [**Freepick**](https://www.flaticon.com/authors/freepik) e preciso citálo em algum lugar para dar-lhe os créditos
 * Teste que garante que 20 histórias são exibidas e então as próximas histórias são exibidas após clicar no botão _More_
 * Teste que garante que uma história é removida da lista corretamente
 * Teste que busca por um termo digitando e pressionando ENTER
